prover-ray/zkcdriver/testdata/synced/invalid/if_01.zkc
//error:4:6-7:invalid condition
fn f(x:u8) -> (r:u8) {
  r = 0
  if x = 0 {
    r = 1
    return
  }
  return
}
